tests/bad_programs/type_errors/str_sub_int_ass.notc
int main() {
    int a = "AAAAAAAAAAAA" - 7;
    return 0;
}
